Add Item and User Put and Delete Routing
