# cpr-backend/routes/userRoute.js
@@ -10,7 +10,7 @@ const userRouter = express.Router();
  */
 userRouter.get('/api/user', async (req, res) => {
   try {
-    const users = await User.find(); // Retrieve all users
+    const users = await User.find(); // Find all users
     res.status(200).json(users);
   } catch (error) {
     res.status(500).json({ message: error.message });
@@ -24,9 +24,9 @@ userRouter.get('/api/user', async (req, res) => {
  */
 userRouter.get('/api/user/:username', async (req, res) => {
   try {
-    const name = req.params.username.toLowerCase(); // Retrieve name from request URL
+    const name = req.params.username.toLowerCase(); // Get name from request URL
     const regex = new RegExp(name, 'i'); // Create a case-insensitive regex
-    const user = await User.findOne({ username: { $regex: regex }});  // Retrieve user by name
+    const user = await User.findOne({ username: { $regex: regex }});  // Find user by name
     if (!user) {
       return res.status(404).json({ message: 'User not found' });
     }
@@ -36,7 +36,7 @@ userRouter.get('/api/user/:username', async (req, res) => {
   }
 });
 
-// create a user by name (POST request)
+// create a user (POST request)
 /**
  * @swagger
  * /api/user:
@@ -53,6 +53,51 @@ userRouter.post('/api/user', async (req, res) => {
     res.status(201).json(user);
   } catch (error) {
     res.status(400).json({ message: error.message });
+  }
+});
+
+// update a user by name (PUT request)
+/**
+ * @swagger
+ * /api/user/{username}:
+ */
+userRouter.put('/api/user/:username', async (req, res) => {
+  try {
+    const name = req.params.username.toLowerCase(); // Get name from request URL
+    const regex = new RegExp(name, 'i'); // Create a case-insensitive regex
+    const user = await User.findOne({ username: { $regex: regex }});  // Find user by name
+    if (!user) {
+      return res.status(404).json({ message: 'User not found' });
+    }
+    user.username = req.body.username;
+    user.email = req.body.email;
+    user.phoneNumber = req.body.phoneNumber;
+    user.address = req.body.address;
+    user.status = req.body.status;
+    await user.save();
+    res.status(200).json(user);
+  } catch (error) {
+    res.status(500).json({ message: error.message });
+  }
+});
+
+// delete a user by name (DELETE request)
+/**
+ * @swagger
+ * /api/user/{username}:
+ */
+userRouter.delete('/api/user/:username', async (req, res) => {
+  try {
+    const name = req.params.username.toLowerCase(); // Get name from request URL
+    const regex = new RegExp(name, 'i'); // Create a case-insensitive regex
+    const user = await User.findOne({ username: { $regex: regex }});  // Find user by name
+    if (!user) {
+      return res.status(404).json({ message: 'User not found' });
+    }
+    await User.deleteOne({ username: { $regex: regex }}); //Delete user by name
+    res.status(200).json({ message: 'User deleted' });
+  } catch (error) {
+    res.status(500).json({ message: error.message });
   }
 });
 
