# cpr-backend/src/swagger/swagger.yaml
@@ -130,8 +130,12 @@ paths:
       responses:
         "200":
           description: successful operation
+        "204":
+          description: Delete item success
         "400":
           description: Invalid itemName supplies
+        "404":
+          description: Item not found
   /api/item/{term}:
     get:
       tags:
@@ -308,11 +312,38 @@ paths:
           schema:
             type: string
       requestBody:
-        description: Update an existent user in the store
+        description: update user object
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              required:
+                - username
+                - email
+                - phoneNumber
+                - address
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: "Tiến Tài"
+                email:
+                  type: string
+                  example: tientai@example.com
+                password:
+                  type: string
+                  example: ""
+                phoneNumber:
+                  type: string
+                  example: "12345"
+                address:
+                  type: string
+                  example: "Thành phố HCM"
+                status:
+                  type: string
+                  example: "Active"
+                  enum:
+                    - Active
+                    - Inactive
       responses:
         "200":
           description: successful operation
@@ -336,10 +367,133 @@ paths:
       responses:
         "200":
           description: successful operation
+        "204":
+          description: Delete user success
         "400":
           description: Invalid username supplied
         "404":
           description: User not found
+  /api/category:
+    get:
+      tags:
+        - Category
+      summary: Get all Categories
+      description: Returns a list of categories
+      operationId: getAllCategories
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Invalid ID supplied
+        "404":
+          description: Category not found
+  /api/category/{categoryName}:
+    get:
+      tags:
+        - Category
+      summary: Get Category by name
+      description: Returns a category
+      operationId: getCategoryByName
+      parameters:
+        - name: categoryName
+          in: path
+          description: name of a Category
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Invalid category supplied
+        "404":
+          description: Category not found
+    post:
+      tags:
+        - Category
+      summary: Create a new Category
+      description: create a new Category
+      operationId: createCategory
+      requestBody:
+        description: Create a new category
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+      responses:
+        "201":
+          description: Create category success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+    put:
+      tags:
+        - Category
+      summary: Update an existing Category
+      description: Update an existing Category by name
+      operationId: updateCategoryById
+      parameters:
+        - name: category
+          in: path
+          description: name of a Category
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Update an existent Category
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        "400":
+          description: Invalid category supplied
+        "404":
+          description: Category not found
+        "422":
+          description: Validation exception
+    delete:
+      tags:
+        - Category
+      summary: Deletes a Category
+      description: delete a Category by name
+      operationId: deleteCategory
+      parameters:
+        - name: category
+          in: path
+          description: name of a Category
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+        "204":
+          description: Delete category success
+        "404":
+          description: Category not found
+        "400":
+          description: Invalid category supplies
   /api/hello:
     get:
       summary: test API
